# pokemon-todo

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  project_structure.md  requirements.md
backend/: Dockerfile  Makefile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: ai.py  moves.py  pokemon.py  router.py
backend/app/core/: database.py  error_handlers.py  exceptions.py
backend/app/models/: __init__.py  battle.py  move.py  pokemon.py
backend/app/schemas/: __init__.py  battle.py  move.py  pokemon.py
backend/app/services/: ai_service.py  move_service.py  pokemon_service.py
database/: init.sql
docs/madr/: 0001-backend-architecture.md  0001-database-implementation-strategy.md  0001-docker-compose-implementation.md  0001-frontend-architecture.md  0002-component-architecture.md  0003-state-management.md  0004-animation-strategy.md  0005-styling-system.md
docs/plan/: README.md  phase1-foundation.md  phase2-core-features.md  phase3-game-elements.md  phase4-ui-ux.md  phase5-optimization.md
frontend/: .eslintrc.json  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App-simple.tsx  App.tsx  index.css  main.tsx
frontend/src/api/: ai.ts  client.ts  moves.ts  pokemon.ts
frontend/src/hooks/: useAI.ts  useFormValidation.ts  useKeyboardNavigation.ts
frontend/src/pages/: HomePage.tsx  PokemonDetailPage.tsx
frontend/src/stores/: moveStore.ts  pokemonStore.ts  (+1 more)
(+30 files in other folders)
